# zfs

./: .gitignore  configure.ac
cmd/: Makefile.am
cmd/raidz_test/: raidz_test.h
cmd/uzfs/: Makefile.am  uzfs  uzfs.c
cmd/zdb/: Makefile.am  zdb.c
cmd/zfs/: zfs_main.c
cmd/zpool/: Makefile.am  zpool_main.c  zpool_util.c
cmd/ztest/: Makefile.am  ztest.c
include/: libuzfs.h  libzfs.h
include/linux/: capability.h
include/os/freebsd/spl/sys/: ccompile.h
include/os/linux/zfs/sys/: policy.h  zfs_ctldir.h  zfs_vfsops_os.h  zfs_vnops_os.h  zfs_znode_impl.h  zpl.h
include/spl/sys/: cred.h  fcntl.h  strings.h  vfs.h
include/sys/: Makefile.am  dmu.h  gfp.h  kernel.h  sa.h  uio_impl.h  uspl.h  uzfs.h  zfs_acl.h  zfs_context.h  zfs_fuid.h  zfs_ioctl.h  zfs_ioctl_impl.h  zfs_sa.h  zfs_stat.h  zvol.h
include/sys/fm/: util.h
include/sys/fs/: zfs.h
lib/libspl/include/: umem.h
lib/libspl/include/os/linux/sys/: vnode.h  zfs_context_os.h
lib/libspl/include/sys/: cred.h  kmem.h  uio.h  vnode.h
lib/libuzfs/: Makefile.am  libuzfs.c
lib/libzfs/: Makefile.am  libzfs_dataset.c  libzfs_util.c
lib/libzfs/os/linux/: libzfs_util_os.c
lib/libzfs_core/: Makefile.am  libzfs_core.c
lib/libzfs_core/os/linux/: libzfs_core_ioctl.c
lib/libzpool/: Makefile.am  kernel.c  uspl.c  uzfs.c  uzfs_uio.c
module/os/linux/zfs/: abd_os.c  arc_os.c  policy.c  zfs_acl.c  zfs_ctldir.c  zfs_dir.c  zfs_ioctl_os.c  zfs_vfsops.c  zfs_vnops_os.c  zfs_znode.c  zpl_ctldir.c  zpl_file.c  zpl_inode.c  zpl_xattr.c
module/zfs/: dmu.c  dmu_tx.c  dsl_pool.c  fm.c  refcount.c  sa.c  spa_misc.c  txg.c  zfs_byteswap.c  zfs_fm.c  zfs_fuid.c  zfs_ioctl.c  zfs_log.c  zfs_replay.c  zfs_sa.c  zfs_vnops.c
rpm/generic/: zfs.spec.in
